add : Feature Test Mode

--- a/env.example
+++ b/env.example
@@ -2,4 +2,7 @@
 MAIN_WALLET_PRIVATE_KEY=
 
 # Ganti dengan RPC URL untuk BSC Mainnet
-BSC_RPC_URL=
+BSC_RPC_URL=https://bsc-dataseed.binance.org/
+
+# BARU: Ganti dengan RPC URL untuk BSC Testnet (MANDATORY untuk Test Mode)
+BSC_TESTNET_RPC_URL=https://bsc-testnet-rpc.publicnode.com
